--- a/src/main/res/layout/activity_dtimer.xml
+++ b/src/main/res/layout/activity_dtimer.xml
@@ -52,6 +52,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="64dp"
         android:fontFamily="@font/roboto_bold"
+        android:onClick="setTimer"
         android:text="Set timer"
         app:backgroundTint="#C00003"
         app:layout_constraintEnd_toEndOf="parent"
