21/01/2023 Added initial pause button function quickly validate the pause method when confidence is low. Added loop 2 and loop 3 into sleep receiever, looking at whether: 2) timer has already started and the confidence has dropped below required, so the countodwn timer must pause, but recognise a timer has already started. 3) A timer is started but paused, and the confidence is now greater than required, so resume timer.
(1 being started a new timer for the first time)

--- a/src/main/res/layout/activity_sleep.xml
+++ b/src/main/res/layout/activity_sleep.xml
@@ -84,6 +84,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_bold"
+        android:onClick="pauseAll"
         android:text="Pause"
         app:backgroundTint="#C00003"
         app:layout_constraintEnd_toEndOf="parent"
