24th Jan 2023 Fixed CountdownService.java onFinish - previously was assumed alert receiver was an intent. Skipped using alert receiver and went straight to AlarmService.java. Implemented snooze function and added try and exception to cancelling the countdown service. Could do with validation when both countdown service is active and regular alarm finishes.

--- a/src/main/res/layout/activity_cancel.xml
+++ b/src/main/res/layout/activity_cancel.xml
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/snorlab_circle" />
+        app:srcCompat="@drawable/snorlab_owl" />
 
     <TextView
         android:id="@+id/titleTextView4"
@@ -71,6 +71,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="64dp"
         android:fontFamily="@font/roboto_bold"
+        android:onClick="snoozeAlarm"
         android:text="Snooze"
         app:backgroundTint="#C00003"
         app:layout_constraintEnd_toEndOf="parent"
