28th Jan 2023 Updated the app icon using image asset. Added TaskStackBuilder to the NotificationHelper.java intent. This is to ensure when the app is opened from the notification, the app hierarchy is maintained and the user can press 'back'

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/snorlab_owl" />
+        app:srcCompat="@drawable/snorlab_app_owl" />
 
     <TextView
         android:id="@+id/titleTextView"
