--- a/src/main/res/layout/activity_help.xml
+++ b/src/main/res/layout/activity_help.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1F012A"
-    tools:context=".FeedbackActivity">
+    tools:context=".HelpActivity">
 
 
     <TextView
